tests/fixtures/valid/all_logical_types.avsc
{
  "type": "record",
  "name": "AllLogicalTypes",
  "namespace": "com.example",
  "fields": [
    {
      "name": "birthday",
      "type": {
        "type": "int",
        "logicalType": "date"
      }
    },
    {
      "name": "wakeup_time",
      "type": {
        "type": "int",
        "logicalType": "time-millis"
      }
    },
    {
      "name": "precise_time",
      "type": {
        "type": "long",
        "logicalType": "time-micros"
      }
    },
    {
      "name": "created_at",
      "type": {
        "type": "long",
        "logicalType": "timestamp-millis"
      }
    },
    {
      "name": "updated_at",
      "type": {
        "type": "long",
        "logicalType": "timestamp-micros"
      }
    },
    {
      "name": "local_timestamp_ms",
      "type": {
        "type": "long",
        "logicalType": "local-timestamp-millis"
      }
    },
    {
      "name": "local_timestamp_us",
      "type": {
        "type": "long",
        "logicalType": "local-timestamp-micros"
      }
    },
    {
      "name": "user_id",
      "type": {
        "type": "string",
        "logicalType": "uuid"
      }
    },
    {
      "name": "price",
      "type": {
        "type": "bytes",
        "logicalType": "decimal",
        "precision": 10,
        "scale": 2
      }
    },
    {
      "name": "amount_no_scale",
      "type": {
        "type": "bytes",
        "logicalType": "decimal",
        "precision": 20
      }
    }
  ]
}
