tests/fixtures/invalid/decimal_scale_exceeds_precision.avsc
{
  "type": "record",
  "name": "InvalidScale",
  "fields": [
    {
      "name": "bad_decimal",
      "type": {
        "type": "bytes",
        "logicalType": "decimal",
        "precision": 5,
        "scale": 10
      }
    }
  ]
}
